--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,11 @@ Flask-Migrate==4.0.5
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 
-# AI & ML
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.26.2
-
-# Utilities
-cloudinary==1.37.0
-Pillow==10.1.0
-requests==2.31.0
+# Utilities (مؤقتاً أزل المشكلة)
+# cloudinary==1.37.0
+# Pillow==10.1.0
+# requests==2.31.0
 
 # Production Server
 gunicorn==21.2.0
+openai
